@startuml

title __SMARTCREDIT's Class Diagram__\n

  namespace ch.bzz.smartcredit.data {
    class ch.bzz.smartcredit.data.DataHandler {
    }
  }
  

  namespace ch.bzz.smartcredit.data {
    class ch.bzz.smartcredit.data.UserData {
    }
  }
  

  namespace ch.bzz.smartcredit.model {
    class ch.bzz.smartcredit.model.KKarte {
    }
  }
  

  namespace ch.bzz.smartcredit.model {
    class ch.bzz.smartcredit.model.Kunde {
    }
  }
  

  namespace ch.bzz.smartcredit.model {
    class ch.bzz.smartcredit.model.User {
    }
  }
  

  namespace ch.bzz.smartcredit.service {
    class ch.bzz.smartcredit.service.Config {
    }
  }
  

  namespace ch.bzz.smartcredit.service {
    class ch.bzz.smartcredit.service.KKarteService {
    }
  }
  

  namespace ch.bzz.smartcredit.service {
    class ch.bzz.smartcredit.service.KundeService {
    }
  }
  

  namespace ch.bzz.smartcredit.service {
    class ch.bzz.smartcredit.service.TestService {
    }
  }
  

  namespace ch.bzz.smartcredit.service {
    class ch.bzz.smartcredit.service.UserService {
    }
  }
  

  ch.bzz.smartcredit.model.KKarte o-- ch.bzz.smartcredit.model.Kunde : kunde
  ch.bzz.smartcredit.service.Config -up-|> javax.ws.rs.core.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
